# randy

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.yml
bench/: Cargo.toml  README.md
bench/benches/: bat_test.rs  digit_test.rs  direntry.rs  macro.rs  proc.rs  split.rs
bench/src/: lib.rs
benches/: proc.rs
config/: config.yml  default.yml  my_desktop.yml  my_gpu.yml  my_laptop.yml  rpi.yml  test.yml
packaging/fedora/: randy.spec
packaging/fedora/builder/: Dockerfile  build_it.sh  docker_helper.sh
packaging/flatpak/: README.md  buildrun.sh  org.ahands.ian.Randy.yml
packaging/gentoo/: helper.sh  randy.ebuild
scripts/: bench-release.sh  build.sh  build_opts_test.sh  rss_proc_missing.sh
src/: deets.rs  file_utils.rs  lib.rs  macros.rs  main.rs
src/styles/: app.css
