[package]
name = "randy"
version = "1.5.2"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2018"
description = "Conky like app in Rust"
homepage = "https://github.com/iphands/randy"
repository = "https://github.com/iphands/randy"
readme = "README.md"
license-file = "LICENSE"
exclude = [ "/assets/*", "/scripts/*" ]

[profile.dev]
opt-level = "s"
debug = 0

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
overflow-checks = false

[features]
runtime_bench = []
timings = []
nvidia = [ "nvml-wrapper" ]

[dependencies]
glib = "0.10"
gio = "0.9"
gtk = "0.9"
minimal-yaml = "0.1"
yaml-rust = "0.4"
libc = "0.2"
lazy_static = "1.4"
sensors = { version = "0.2", optional = true }
nvml-wrapper = { version = "0.6", optional = true }
