[package]
name = "randy"
version = "1.6.10"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2018"
description = "Conky like app in Rust"
homepage = "https://github.com/iphands/randy"
repository = "https://github.com/iphands/randy"
readme = "README.md"
license = "GPL-3.0"
exclude = [ "/assets/*", "/scripts/*" ]

[profile.dev]
opt-level = "s"
debug = 0

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
overflow-checks = false

[features]
runtime_bench = []
timings = []
packaged = []
nvidia = [ "nvml-wrapper" ]

[dependencies]
glib = "0.15"
gio = "0.15"
gtk4 = "0.4"
yaml-rust = "0.4"
libc = "0.2"
lazy_static = "1.4"
sensors = { version = "0.2", optional = true }
nvml-wrapper = { version = "0.6", optional = true }
