[package]
name = "randy"
version = "1.6.10"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2021"
description = "Conky like app in Rust"
homepage = "https://github.com/iphands/randy"
repository = "https://github.com/iphands/randy"
readme = "README.md"
license = "GPL-3.0"
exclude = [ "/assets/*", "/scripts/*" ]

[profile.dev]
opt-level = "s"
debug = 0

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = true            # Automatically strip symbols from the binary
incremental = true      # Save information to disk, improving re-compile times.
lto = true              # Enable link time optimization
opt-level = 3           # all optimizations
overflow-checks = false # When overflow-checks are enabled, a panic will occur on overflow.
codegen-units = 1       # Use a single codegen for size optimization
panic = "abort"         # Remove traceback information

[features]
runtime_bench = []
timings = []
packaged = []
nvidia = [ "nvml-wrapper" ]

[dependencies]
glib = "0.17"
gio = "0.17"
gtk = "0.17"
yaml-rust = "0.4"
libc = "0.2"
lazy_static = "1.4"
sensors = { version = "0.2", optional = true }
nvml-wrapper = { version = "0.9", optional = true }
